style.css
html {
  font-size: 16px;
  font-family: "Space Mono", sans-serif;
}

.headSection {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  height: 4rem;  // per spec
  background-color: rgba(255, 245, 238, 1);  // seashell
}

.logoAndName {
  display: inline-flex;
  align-items: center;
}

.logoAndName img {
  margin-left: 1.5rem;  // per spec
}

.name {
  font-size: 1rem;
}

.darkColor {
  font-weight: bold;
}

.lightColor {
  color: rgba(148, 148, 148, 1);  // lighter gray
}

.navArea {
  //background-color: yellow;  // debug
}

.navArea .desktop {
  display: flex;
  justify-content: flex-end;
}

.navArea .desktop li {
  padding-right: 1rem;  // per spec
  color: rgba(108, 108, 108, 1);  // gray - not working
}

.emptyArea {
  display: block;
  height: 11.25rem;  // per spec
  width: 100%;
  background-color: rgba(148, 148, 148, 1); 
  //border: medium solid red;  // debug
}

.introSection {
  display: flex;
  flex-direction: row;
  align-items: center;
  max-height: 20rem;  // bug: img still scales beyond this container
  //background-color: rgba(208, 208, 208, 1);  stopped working
  background-color: lightgray;
  padding: 2rem 2.5rem 2rem 1.5rem;  // per spec
}

.introSection img {
  width: 60%;  // per spec
  //max-width: 100%;  // scale for resize
  //height: auto;  // scale for resize
}

.textArea {
  display: flex:
  flex-direction: column;
  margin-left: 2.5rem;  // per spec 
  width: 80%;
}

.text1 {
  font-size: 1.5rem;
  font-weight: bold;
  color: rgba(70, 70, 70, 1);
}

.text2 {
  font-size: 0.9rem;
  //padding-top: 2rem;  // per spec for mobile?
  //padding-bottom: 1.5rem;  // per spec for mobile?
}

.button {
  font-size: 0.75rem;
  text-align: center;
  color: rgba(255, 255, 255, 1);
  background-color: rgba(80, 80, 80, 1);
  height: 1.8rem;
  width: 100%;
  padding: 0.5rem auto;  // per spec
}

.infoSection {
  display: flex;
  flex-direction: row;
  height: 20rem;
}

.mainInfo {
  display: flex;
  flex-direction: column;
}

.mainInfo img {
  width: 60%;  // per spec
  max-width: 100%;  // scale for resize
  height: auto;  // scale for resize
}

.additionalInfo {
  display: flex;
  flex-direction: column;
}

.info {
  display: inline-flex;
  width: 26.4375rem;
}

.info img {
  width: 35%;
  max-width: 100%;
  height: auto;
}

.mobile {
  display: none;
}

@media only screen and (max-width: 480px) {
  .logoAndName {
    display: none;
  }
  .navArea .desktop {
    display: none;
  }
  .navArea .mobile {
    display: flex;
    justify-content: space-around;
    align-items: center;
    width: 30rem;  // how to make this dynamic
    flex-shrink: 10;
  }
  .introSection .desktop {
    display: none;
  }
  .emptyArea {
    display: block;
  }
  .mainInfo.desktop {
    display: none;
  }
  .info img .desktop {
    display: none;
  }
  .info img .mobile {
    display: block;
  }
  .info h4.desktop {
    display: none;
  }
  .info h4.mobile {
    display: block;
  }
  .info {
    display: flex;
    flex-direction: column;
  }
}

